--- a/index.html
+++ b/index.html
@@ -66,10 +66,28 @@
         <h2>Новое устройство?</h2>
         <p style="color:var(--text-dim); margin-bottom:30px; text-align:center; max-width:300px;">Мы заметили вход с
             нового IP или устройства. Введите ваш <b>Ключ Безопасности</b>.</p>
-        <div style="max-width:300px; width:90%;">
+        <div style="max-width:300px; width:90%;" id="ipFirstStep">
+            <button class="btn-main" style="margin-bottom:12px;" onclick="app.show2faStep('key')">🔑 Секретный
+                Ключ</button>
+            <button class="btn-main" style="background:#0088cc; margin-bottom:12px;" id="btnTgCodeReq"
+                onclick="app.requestTg2fa()">✈️ Код в Telegram</button>
+        </div>
+
+        <div style="max-width:300px; width:90%; display:none;" id="ipKeyInputStep">
             <input type="text" id="ipSecretInput" class="big-input" placeholder="Ваш секретный ключ">
             <button class="btn-main" onclick="app.verifySecret()">Подтвердить</button>
+            <button class="btn-main" style="background:transparent; font-size:12px; margin-top:10px;"
+                onclick="app.show2faStep('choice')">← Назад</button>
             <div id="ipError" style="color:var(--danger); font-size:12px; margin-top:10px; text-align:center;"></div>
+        </div>
+
+        <div style="max-width:300px; width:90%; display:none;" id="ipTgInputStep">
+            <p style="font-size:12px; color:var(--text-dim); margin-bottom:10px;">Код отправлен в Telegram боту.</p>
+            <input type="text" id="ipTgCodeInput" class="big-input" placeholder="6-значный код" maxlength="6">
+            <button class="btn-main" onclick="app.verifyTg2fa()">Подтвердить Код</button>
+            <button class="btn-main" style="background:transparent; font-size:12px; margin-top:10px;"
+                onclick="app.show2faStep('choice')">← Назад</button>
+            <div id="tgIpError" style="color:var(--danger); font-size:12px; margin-top:10px; text-align:center;"></div>
         </div>
     </div>
 
@@ -92,8 +110,19 @@
         <div class="modal">
             <h1>Настройки</h1>
             <p>Безопасность и профиль</p>
-            <input type="text" id="editName" class="big-input" placeholder="Новое имя">
-            <input type="password" id="editPass" class="big-input" placeholder="Новый пароль">
+            <input type="text" id="editName" class="big-input" placeholder="Имя пользователя">
+
+            <div style="margin: 15px 0; border-top: 1px solid var(--border); padding-top: 15px;">
+                <p style="font-size:12px; color:var(--text-dim); margin-bottom:10px; text-align:left;">Для изменения
+                    данных введите текущий пароль:</p>
+                <input type="password" id="oldPass" class="big-input" placeholder="Текущий пароль">
+            </div>
+
+            <div style="margin: 15px 0;">
+                <p style="font-size:12px; color:var(--text-dim); margin-bottom:10px; text-align:left;">Новый пароль
+                    (оставьте пустым, если не меняете):</p>
+                <input type="password" id="editPass" class="big-input" placeholder="Новый пароль">
+            </div>
 
             <div class="settings-section"
                 style="text-align:left; margin-top:20px; border-top:1px solid var(--border); padding-top:15px;">
@@ -128,7 +157,7 @@
                             style="font-size:18px; font-weight:bold; color:var(--accent); letter-spacing:3px; margin:10px 0; display:none;">
                             - - - - - -</p>
                         <p id="tgPairingStatus" style="font-size:12px; color:var(--text-dim); margin-bottom:10px;">
-                            Привяжите аккаунт, чтобы получать уведомления.</p>
+                            Привяжите аккаунт, чтобы получать 2FA и команды (<b>/logout</b>).</p>
                         <button id="tgPairBtn" class="btn-main" style="height:35px; font-size:13px; background:#0088cc;"
                             onclick="app.startTgPairing()">Привязать через Код</button>
                     </div>
