--- a/index.html
+++ b/index.html
@@ -39,8 +39,29 @@
 
             <input type="text" id="setupName" class="big-input" placeholder="Никнейм" maxlength="20">
             <input type="password" id="setupPass" class="big-input" placeholder="Пароль">
+
+            <div id="login-2fa-choice" style="display:none; margin-top:15px;">
+                <p style="font-size:12px; color:var(--text-dim); margin-bottom:10px;">Выберите способ входа:</p>
+                <div style="display:flex; gap:10px;">
+                    <button class="btn-main" style="flex:1; height:40px; font-size:13px;"
+                        onclick="app.setLogin2fa('key')">🔑 Ключ</button>
+                    <button class="btn-main" style="flex:1; height:40px; font-size:13px; background:#0088cc;"
+                        onclick="app.requestLoginTg()">✈️ Telegram</button>
+                </div>
+            </div>
+
             <input type="password" id="setupSecretInput" class="big-input" placeholder="Ключ Безопасности"
-                style="display:none;">
+                style="display:none; margin-top:15px;">
+
+            <div id="login-tg-wait"
+                style="display:none; margin-top:15px; background:var(--glass); padding:10px; border-radius:10px;">
+                <p style="font-size:12px; color:var(--text-dim);">Отправьте <b>/login</b> боту <a
+                        href="https://t.me/p2p2fabot" target="_blank" style="color:var(--accent)">@p2p2fabot</a></p>
+                <div id="loginTgStatus" style="font-size:11px; margin-top:5px; color:var(--accent);">Ожидание
+                    сообщения...</div>
+                <input type="text" id="setupTgCodeInput" class="big-input" placeholder="Код из Telegram" maxlength="6"
+                    style="display:none; margin-top:10px;">
+            </div>
 
             <div id="setup-secret-box"
                 style="display:none; background:var(--glass); padding:10px; border-radius:8px; margin-top:10px; text-align:center;">
