Connectivity: Added TURN relays for global P2P support

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div id="setupError" style="color:var(--danger); font-size:12px; margin-top:10px;"></div>
 
-            <div style="margin-top:30px; border-top:1px solid #333; pt:15px; width:100%; text-align:center;">
+            <div style="margin-top:30px; border-top:1px solid #333; padding-top:15px; width:100%; text-align:center;">
                 <p style="font-size:11px; color:var(--text-dim); cursor:pointer; text-decoration:underline;"
                     onclick="app.clearData()">Очистить всё и начать заново</p>
             </div>
