Mobile Adaptation: Implemented Back button, sliding sidebar, and optimized layout

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
     <div class="chat-area">
         <div class="chat-header">
-            <div class="btn-back" onclick="app.toggleSidebar()">←</div>
+            <div class="btn-back" onclick="app.toggleSidebar()">⬅️</div>
             <div class="avatar" style="width:36px; height:36px; font-size:14px;" id="chatAvatar">?</div>
             <div class="chat-header-info">
                 <h3 id="chatName">Выберите чат</h3>
@@ -261,7 +261,7 @@
             </div>
             <div id="chatSafety" class="fingerprint" style="margin-left:auto; display:none;"
                 onclick="app.showSafetyInfo()">
-                🔒 <span id="fingerprintValue"></span>
+                <span id="fingerprintValue"></span>
             </div>
         </div>
 
