Mobile UI: Fixed z-index conflict and added sidebar backdrop

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
 
     <div id="toast">✅ Готово!</div>
+    <div id="sidebar-backdrop"
+        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:900; backdrop-filter:blur(2px);"
+        onclick="app.toggleSidebar()"></div>
 
     <!-- Регистрация / Вход -->
     <div id="setup-overlay" class="overlay" style="display: none;">
