--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
     <div id="settings-overlay" class="overlay" style="display: none;"
         onclick="if(event.target===this) this.style.display='none'">
         <div class="modal">
+            <div style="position:absolute; top:20px; right:20px; font-size:24px; cursor:pointer; color:var(--text-dim);"
+                onclick="document.getElementById('settings-overlay').style.display='none'">✕</div>
             <h1>Настройки</h1>
             <p>Безопасность и профиль</p>
             <input type="text" id="editName" class="big-input" placeholder="Имя пользователя">
