--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                 onclick="document.getElementById('settings-overlay').style.display='none'">✕</div>
             <h1>Настройки</h1>
             <p>Безопасность и профиль</p>
+            <div id="encryptionStatus" style="font-size:11px; margin-bottom:15px; font-weight:600;"></div>
             <input type="text" id="editName" class="big-input" placeholder="Имя пользователя">
 
             <div style="margin: 15px 0; border-top: 1px solid var(--border); padding-top: 15px;">
