Fix app initialization hang, null-safe UI updates, and IP check timeout

--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
             <div class="avatar" id="myAvatarDisplay">?</div>
             <div class="profile-info">
                 <h2 id="myNickDisplay">Загрузка...</h2>
-                <small onclick="app.copyMyId()">Нажмите, чтобы скопировать ID</small>
+                <small id="myIdDisplay" onclick="app.copyMyId()" style="cursor:pointer; opacity:0.7;">Нажмите, чтобы
+                    скопировать ID</small>
             </div>
             <div class="btn-settings" onclick="app.openSettings()">⚙️</div>
         </div>
