--- a/index.html
+++ b/index.html
@@ -297,9 +297,11 @@
             <div class="btn-settings" onclick="app.openSettings()">⚙️</div>
         </div>
 
-        <div class="search-container">
+        <div class="search-container" style="display:flex; gap:10px; align-items:center;">
             <input type="text" id="contactSearch" placeholder="Поиск или ввод ID..."
-                onkeypress="if(event.key==='Enter') app.tryAddFriend()">
+                onkeypress="if(event.key==='Enter') app.tryAddFriend()" style="flex:1">
+            <div class="btn-settings" onclick="document.getElementById('group-create-overlay').style.display='flex'"
+                title="Создать группу" style="margin:0; font-size:18px;">👥</div>
         </div>
 
         <div class="contact-list" id="contactList">
@@ -333,6 +335,21 @@
             <input type="text" id="msgInput" placeholder="Ваше сообщение..."
                 onkeypress="if(event.key==='Enter') app.sendMessage()" disabled>
             <button id="sendBtn" class="btn-send" onclick="app.sendMessage()" disabled>➤</button>
+        </div>
+    </div>
+
+    <!-- Создание группы -->
+    <div id="group-create-overlay" class="overlay" style="display: none;"
+        onclick="if(event.target===this) this.style.display='none'">
+        <div class="modal" style="max-width: 400px;">
+            <div style="position:absolute; top:20px; right:20px; font-size:24px; cursor:pointer; color:var(--text-dim);"
+                onclick="document.getElementById('group-create-overlay').style.display='none'">✕</div>
+            <h2>Создать группу</h2>
+            <p style="font-size:12px; color:var(--text-dim); margin-bottom:15px;">После создания вы сможете добавить
+                участников по их ID.</p>
+            <input type="text" id="groupNameInput" class="big-input" placeholder="Название группы" maxlength="30">
+            <button class="btn-main" style="margin-top:10px;"
+                onclick="app.createGroup(document.getElementById('groupNameInput').value)">Создать 🚀</button>
         </div>
     </div>
 
